--- a/Module 1 -  Introduction/1_Notebook_Introduction_to_Python_Pandas_and_Matplotlib.ipynb
+++ b/Module 1 -  Introduction/1_Notebook_Introduction_to_Python_Pandas_and_Matplotlib.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import re\n",
     "# ^^^ pyforest auto-imports - don't write above this line\n",
     "!pwd"
    ]
@@ -58,7 +58,8 @@
      "text": [
       " 1_Notebook_Introduction_to_Python_Pandas_and_Matplotlib.ipynb\r\n",
       " 2_Basic_Data_exploration_and_plotting.ipynb\r\n",
-      "'A Tour through the Visualization Zoo.pdf'\r\n"
+      "'A Tour through the Visualization Zoo.pdf'\r\n",
+      " results\r\n"
      ]
     }
    ],
@@ -195,7 +196,7 @@
       "certifi                   2021.5.30                pypi_0    pypi\r\n",
       "cffi                      1.14.6           py38h400218f_0  \r\n",
       "chardet                   4.0.0           py38h06a4308_1003  \r\n",
-      "charset-normalizer        2.0.4                    pypi_0    pypi\r\n",
+      "charset-normalizer        2.0.3                    pypi_0    pypi\r\n",
       "click                     8.0.1              pyhd3eb1b0_0  \r\n",
       "click-plugins             1.1.1                    pypi_0    pypi\r\n",
       "cligj                     0.7.2                    pypi_0    pypi\r\n",
@@ -291,7 +292,7 @@
       "hpack                     3.0.0                    pypi_0    pypi\r\n",
       "html5lib                  1.1                        py_0  \r\n",
       "htmlmin                   0.1.12                   pypi_0    pypi\r\n",
-      "hyperframe                6.0.1                    pypi_0    pypi\r\n",
+      "hyperframe                5.2.0                    pypi_0    pypi\r\n",
       "hyperlink                 21.0.0                   pypi_0    pypi\r\n",
       "ibm-cloud-sdk-core        3.10.1                   pypi_0    pypi\r\n",
       "ibm-watson                5.2.2                    pypi_0    pypi\r\n",
@@ -400,7 +401,7 @@
       "mccabe                    0.6.1                    py38_1  \r\n",
       "mglearn                   0.1.9                    pypi_0    pypi\r\n",
       "mido                      1.2.10                   pypi_0    pypi\r\n",
-      "missingno                 0.5.0                    pypi_0    pypi\r\n",
+      "missingno                 0.4.2                    pypi_0    pypi\r\n",
       "mistune                   0.8.4           py38h7b6447c_1000  \r\n",
       "mkl                       2021.3.0                 pypi_0    pypi\r\n",
       "mkl-fft                   1.3.0                    pypi_0    pypi\r\n",
@@ -478,7 +479,7 @@
       "pluggy                    0.13.1           py38h06a4308_0  \r\n",
       "ply                       3.11                     py38_0  \r\n",
       "pretty-midi               0.2.9                    pypi_0    pypi\r\n",
-      "priority                  2.0.0                    pypi_0    pypi\r\n",
+      "priority                  1.3.0                    pypi_0    pypi\r\n",
       "proglog                   0.1.9                    pypi_0    pypi\r\n",
       "prometheus_client         0.11.0             pyhd3eb1b0_0  \r\n",
       "prompt-toolkit            3.0.19                   pypi_0    pypi\r\n",
@@ -510,7 +511,13 @@
       "pyls-black                0.4.7                    pypi_0    pypi\r\n",
       "pyls-spyder               0.3.2              pyhd3eb1b0_0  \r\n",
       "pymeeus                   0.5.11                   pypi_0    pypi\r\n",
-      "pymongo                   3.11.4                   pypi_0    pypi\r\n",
+      "pymongo                   3.11.4                   pypi_0    pypi\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "pynisher                  0.6.4                    pypi_0    pypi\r\n",
       "pyodbc                    4.0.31                   pypi_0    pypi\r\n",
       "pyopenssl                 20.0.1             pyhd3eb1b0_1  \r\n",
@@ -555,7 +562,7 @@
       "requests                  2.26.0                   pypi_0    pypi\r\n",
       "requests-oauthlib         1.3.0                    pypi_0    pypi\r\n",
       "requests-unixsocket       0.2.0                    pypi_0    pypi\r\n",
-      "researchpy                0.2.3                    pypi_0    pypi\r\n",
+      "researchpy                0.3.2                    pypi_0    pypi\r\n",
       "ripgrep                   12.1.1                        0  \r\n",
       "rope                      0.19.0             pyhd3eb1b0_0  \r\n",
       "rsa                       4.7.2                    pypi_0    pypi\r\n",
@@ -563,7 +570,7 @@
       "ruamel-yaml-clib          0.2.6                    pypi_0    pypi\r\n",
       "ruamel_yaml               0.15.100         py38h27cfd23_0  \r\n",
       "scikit-image              0.18.2                   pypi_0    pypi\r\n",
-      "scikit-learn              0.24.0                   pypi_0    pypi\r\n",
+      "scikit-learn              0.23.1                   pypi_0    pypi\r\n",
       "scipy                     1.6.3                    pypi_0    pypi\r\n",
       "scrapy                    2.5.0                    pypi_0    pypi\r\n",
       "seaborn                   0.11.1             pyhd3eb1b0_0  \r\n",
@@ -1171,27 +1178,27 @@
        "-15      575\n",
        "-10      550\n",
        "-5       525\n",
-       " 0       500\n",
-       " 5       475\n",
-       " 10      450\n",
-       " 15      425\n",
-       " 20      400\n",
-       " 25      375\n",
-       " 30      350\n",
-       " 35      325\n",
-       " 40      300\n",
-       " 45      275\n",
-       " 50      250\n",
-       " 55      225\n",
-       " 60      200\n",
-       " 65      175\n",
-       " 70      150\n",
-       " 75      125\n",
-       " 80      100\n",
-       " 85       75\n",
-       " 90       50\n",
-       " 95       25\n",
-       " 100       0\n",
+       "0        500\n",
+       "5        475\n",
+       "10       450\n",
+       "15       425\n",
+       "20       400\n",
+       "25       375\n",
+       "30       350\n",
+       "35       325\n",
+       "40       300\n",
+       "45       275\n",
+       "50       250\n",
+       "55       225\n",
+       "60       200\n",
+       "65       175\n",
+       "70       150\n",
+       "75       125\n",
+       "80       100\n",
+       "85        75\n",
+       "90        50\n",
+       "95        25\n",
+       "100        0\n",
        "Name: Sequenc3, dtype: int64"
       ]
      },
@@ -1202,7 +1209,7 @@
    ],
    "source": [
     "Series(range(1000, -1, -25),\n",
-    "       index = list(range(-100, 101, 5)),\n",
+    "       index = range(-100, 101, 5),\n",
     "       name = 'Sequenc3')"
    ]
   },
@@ -1906,7 +1913,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f095b1cd6d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f28566ee700>]"
       ]
      },
      "execution_count": 26,
@@ -2992,6 +2999,20 @@
    "outputs": [
     {
      "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import re'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "0    False\n",
        "1    False\n",
@@ -3337,20 +3358,6 @@
    "execution_count": 50,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
