--- a/Module 1 -  Introduction/M1_T01_ Scatter plot.ipynb
+++ b/Module 1 -  Introduction/M1_T01_ Scatter plot.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# IT Academy - Data Visualization with Python & R\n",
-    "## [M1 T01: Scatter Plot](https://github.com/jesussantana/data_visualization_python/tree/main/Module%201%20-%20%20Introduction/M01_T01_Scatter_Plot.ipynb) \n",
+    "## [M1 T01: Scatter Plot](https://github.com/jesussantana/data_visualization_python/blob/main/Module%201%20-%20%20Introduction/M1_T01_%20Scatter%20plot.ipynb) \n",
     "### [Github Data Visualiztion](https://github.com/jesussantana/data_visualization_python) \n",
     "\n",
     "\n",
